# selected_topics_in_programming

./: .gitignore
Concurrency/: sanitizers.cmake
Concurrency/include/: mtqueue.hpp
Concurrency/src/: mtqueue.cpp
Exam/: CMakeLists.txt  FunctionToTest.h  Observer.cpp  Observer.h  Observers.h  Test_doctest.cpp  benchmark.cpp  doctest.cmake  main.cpp  test_stochastic_simulation.cpp  vessel_t.cpp  vessel_t.h
Exam/Data/: SimulationTrajectories.py
Exam/Examples/: CMakeLists.txt  CircadianRhythmExample.h  CircadianRythmExample.cpp  CircadianRythmExample.h  CovidExample.h  SimpleExample.cpp  SimpleExample.h
Exam/Include/: CMakeLists.txt  Exceptions.h  SymbolTable.cpp  SymbolTable.h
Exam/Include/Reaction/: Agent.cpp  Agent.h  Reaction.cpp  Reaction.h  ReactionComponent.cpp  ReactionComponent.h
Exam/Include/Simulator/: ParallelSimulator.cpp  ParallelSimulator.h  Simulator.cpp  Simulator.h  StateObserver.cpp  StateObserver.h
Exam/Reaction/: Agent.cpp  Agent.h  Reaction.cpp  Reaction.h  Rule.cpp  Rule.h
Original/Concurrency/: README.md
Original/Concurrency/src/: CMakeLists.txt  stringsort4_bm.cpp
Original/calculator/: CMakeLists.txt  CMakeSettings.json  README.md  test_calculator.cpp
Original/calculator/terms/: assign_t.cpp  assign_t.h  const_t.cpp  unary_t.h  var_t.cpp  var_t.h
Original/calculator/terms/visitors/: evaluator.cpp  printer.cpp
Original/cpp/: CMakeLists.txt
Original/cpp/Session2/: endian.cpp  randomNumbers.h  session2.cpp  sizes.cpp  sizes.h
Original/exercise5-1/: CMakeLists.txt
Original/extended1-template/: CMakeLists.txt  benchmark.cmake  bm_number_series.cpp  main.cpp  number_series.h
Original/polygon/: polygon.cpp  polygon.hpp
Original/polyline/: Polyline.cpp  Polyline.h  main.cpp
ReadUp/concurrency/: benchmark.cmake  doctest.cmake
ReadUp/concurrency/include/: mtqueue.hpp
ReadUp/concurrency/src/: futures.cpp  mtqueue.cpp  stringsort1_bm.cpp  stringsort2_bm.cpp
ReadUp/concurrency2/: CMakeLists.txt  README.md
ReadUp/concurrency2/include/: mtqueue.hpp
ReadUp/concurrency2/src/: mtqueue.cpp  stringsort0_bm.cpp  stringsort3_bm.cpp
ReadUp/lecture1/: CMakeLists.txt  main.cpp
calculator/: CMakeLists.txt  calculator.hpp  exceptions.h  symbol_table_t.cpp  symbol_table_t.h  test_calculator.cpp
calculator/terms/: assign_t.cpp  assign_t.h  binary_t.cpp  binary_t.h  const_t.h  term_t.h  unary_t.cpp  unary_t.h  var_t.cpp  var_t.h
calculator/terms/visitors/: evaluate.cpp  evaluate.h  evaluator.cpp  evaluator.h  printer.h  term_visitor.h
cpp/: session1.cpp
cpp/Session2/: endian.h  pointers.cpp  pointers.h  randomNumbers.cpp
cpp/Session3/: session3.cpp
exercise5-1/: Derived.h  base.h  main.cpp
extended1-template/: README.md  bm_sort.cpp  doctest.cmake  latex-code.sh  listing.tex  number_series.cpp  test_number_series.cpp
polygon/: CMakeLists.txt  test_polygon.cpp
polyline/: CMakeLists.txt
