add_library(
        Include
        Reaction/Agent.cpp
        Reaction/Agent.h
        Reaction/Reaction.cpp
        Reaction/Reaction.h
        Reaction/ReactionComponent.cpp
        Reaction/ReactionComponent.h
        Reaction/Rule.cpp
        Reaction/Rule.h
        SymbolTable.h
        Exceptions.h
        Simulator/Simulator.cpp
        Simulator/Simulator.h
        Simulator/StateObserver.cpp
        Simulator/StateObserver.h)